--- a/Dockerfile.pinpoint
+++ b/Dockerfile.pinpoint
@@ -36,7 +36,7 @@ COPY --from=agent /pinpoint-agent /pinpoint-agent
 # 언어 설정
 RUN apt-get update && apt-get -y install sudo
 #apt-get install -y language-pack-ko && \
-#RUN locale-gen ko_KR.UTF-8
+#RUN locale-gen ko_KR.UTF-8˚
 #RUN update-locale LC_ALL=ko_KR.UTF-8 LANG=ko_KR.UTF-8
 ENV LANG ko_KR.UTF-8
 ENV LANGUAGE ko_KR.UTF-8
