kotlin 1.5.31 -> 1.6.0 springboot 2.5.5 -> 2.5.7 springdoc 1.5.11 -> 1.5.12 외 다수 라이브러리 업데이트 gradle 7.2 -> 7.3 엑셀 유틸 NUMERIC 타입의 Cell 지수표현식 문제점에 대한 보완 로컬 서버 기동시 문제가 되는 부분들 로컬에서 문제없이 기동되도록 수정 MongoDB 테스트 라이브러리 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,11 +2,32 @@ logging:
   config: classpath:logs/logback-dev.xml
 
 spring:
+  datasource:
+    #url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:mysql://database:3306/company?serverTimezone=Asia/Seoul&useSSL=false&rewriteBatchedStatements=true
+    username: id
+    password: password
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  data:
+    mongodb:
+      uri: mongodb+srv://id:password@cluster0.abcd.mongodb.net/mongo?retryWrites=true&w=majority
+      database: mongo
   jpa:
+    hibernate:
+      ddl-auto: none
+      naming:
+        physical-strategy: com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
     properties:
       hibernate:
         format_sql: true
-
+        default_batch_fetch_size: 100
+        #        jdbc:
+        #          batch_size: 100
+        #          batch_versioned_data: true
+        order_inserts: true
+        order_updates: true
+    database: mysql
+    database-platform: com.skeleton.common.config.MySQLCustomDialect
 eureka:
   instance:
     # 서비스 이름 대신 IP 주소 등록
