--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,10 @@ spring:
       ## 파일이 메모리에 기록되는 임계값 (default: 0B)
       ## 파일의 크기가 fize-size-threshold 값을 초과한다면 파일은 location 경로에 저장되어 해당 파일을 읽어서 작업
       file-size-threshold: 1MB
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
   application:
     # Eureka 서비스명
     name: skeleton-apis
@@ -34,32 +38,6 @@ spring:
 #    exclude:
 #      - org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
 #      - org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
-  datasource:
-    #url: jdbc:postgresql://localhost:5432/postgres
-    url: jdbc:mysql://database:3306/company?serverTimezone=Asia/Seoul&useSSL=false&rewriteBatchedStatements=true
-    username: id
-    password: password
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  data:
-    mongodb:
-      uri: mongodb+srv://id:password@cluster0.abcd.mongodb.net/mongo?retryWrites=true&w=majority
-      database: mongo
-  jpa:
-    hibernate:
-      ddl-auto: none
-      naming:
-        physical-strategy: com.vladmihalcea.hibernate.type.util.CamelCaseToSnakeCaseNamingStrategy
-    properties:
-      hibernate:
-#        format_sql: true
-        default_batch_fetch_size: 100
-#        jdbc:
-#          batch_size: 100
-#          batch_versioned_data: true
-        order_inserts: true
-        order_updates: true
-    database: mysql
-    database-platform: com.skeleton.common.config.MySQLCustomDialect
   cloud:
     config:
       enabled: false
@@ -133,8 +111,8 @@ cloud:
       # AWS의 instanceProfile를 사용
       instanceProfile: true
       # AWS S3 KEY
-      accessKey: ${AWS_ACCESS_KEY_ID}
-      secretKey: ${AWS_SECRET_ACCESS_KEY}
+      accessKey: ${AWS_ACCESS_KEY_ID:AWS_ACCESS_KEY_ID}
+      secretKey: ${AWS_SECRET_ACCESS_KEY:AWS_SECRET_ACCESS_KEY}
 
 # monitoring setting
 management:
