--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,7 +8,22 @@ spring:
     remote:
       restart:
         enabled: true
+  ## LOCAL H2 DB 설정
+  datasource:
+    ## h2 DB 사용 설정
+    url: jdbc:h2:~
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      ## h2 console 사용
+      enabled: true
+      ## /h2 로 접속 지정하지 않으면 /h2-console 로 접속
+      path: /h2
   jpa:
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
